	* Changed the URL plugin to use flatfiles rather than SQLite
	database.  Also reduced the functionality of the last command by
	removing some options that no one ever really used, and removed
	the random command (who uses that anyway?)
	
	* Changed the Words plugin not to use SQLite.  We lose the
	anagram command, but crossword and hangman become much easier to
	use, since all the user has to do is put a words file in
	data/words.
	
	* Changed the Relay plugin to rely only on the registry, allowing
	it to start and join all networks and channels with no user/owner
	interaction at all.  Also, removed the Relay.say and
	Relay.reconnect commands, since both can be accomplished easily
	using the Relay.command command in combination with
	Owner.reconnect and Anonymous.say commands.
	
	* Added supybot.reply.withNoticeWhenPrivate, to make the bot
	reply with a notice when it privately messages a user -- this
	generally means that the user's client won't open a query window,
	which may be nice.  Do note that users can override this setting
	via the user registry variable of the same name.
	
	* Added supybot.nick.alternates, which allows a list of alternate
	nicks to try, in order, if the primary nick (supybot.nick) is
	taken.  Also added a nick-perturbation function that will change
	supybot.nick if there are no alternates or if they're all taken
	as well.  As a result, removed supybot.nickmods.
	
	* Changed ChannelLogger to log channels to logs/ChannelLogger,
	rather than simply logs.
	
	* Added the ChannelRelay plugin, to relay messages between two
	channels.  This might be useful for people who want to forward
	CVS update messages from one channel (such as #commits) to
	another.
	
	* Added Channel.mode, to set modes in the channel, Channel.limit,
	to set the channel limit, Channel.moderate and
	Channel.unmoderate, to set +m and -m, respectively, and
	Channel.key to set or unset the channel keyword.
	
	* Added a new plugin, Format, which offers several commands for